# touza/m4c Makefile.am
# Maintainer:  SAITO Fuyuki
# Created: Jan 20 2021
# Time-stamp: <2021/01/22 08:37:33 fuyuki Makefile.am>

# Copyright (C) 2021
#           Japan Agency for Marine-Earth Science and Technology
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

install-mod:
	@:

dist_pkgdata_DATA	=	mt_am_include.m4 \
						mt_fortran_check.m4 \
						mt_init.m4 \
						mt_package.m4 \
						mt_prog_fc_mpi.m4 \
						mt_shell.m4

### Local Variables:
### mode: makefile-automake
### end:
