# touza/m4c Makefile.am
# Maintainer:  SAITO Fuyuki
# Created: Jan 20 2021
# Time-stamp: <2022/10/20 09:47:04 fuyuki Makefile.am>

# Copyright (C) 2021, 2022
#           Japan Agency for Marine-Earth Science and Technology
# Licensed under the Apache License, Version 2.0
#   (https://www.apache.org/licenses/LICENSE-2.0)

# # need for exteranl distdir
# MOSTLYCLEANFILES	=
# include $(top_srcdir)/aminclude_static.am

EXTRA_DIST = mt_am_include.m4 \
             mt_fortran_check.m4 \
             mt_init.m4 \
             mt_define.m4 \
             mt_package.m4 \
             mt_prog_fc_mpi.m4 \
             mt_shell.m4

dist_pkgdata_DATA = $(EXTRA_DIST)

uninstall-mod:
	@:
install-mod:
	@:
check-bin:
	@:

### Local Variables:
### mode: makefile-automake
### end:
